--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -3,17 +3,39 @@
 <html lang="en">
     <head>
 
-        <title>Leroy Buliro</title>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
+        <title>Leroy Buliro</title>
         <link rel="icon" type="image/png" href="{% static 'core/icons/lb.jpg' %}">
+        <meta name="description" content="Leroy Buliro: deejay, financial advisor, writer, podcaster">
+        <meta name="keyword" content="Kenya, Nairobi, booze, travel, nightlife, food, lifestyle, culture">
+
+        <!-- meta author -->
+        <meta name="author" content="Leroy Buliro">
+
+        <!-- Twitter -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@leroybuliro">
+        <meta name="twitter:creator" content="@leroybuliro">
+        <meta name="twitter:title" content="Leroy Buliro">
+        <meta name="twitter:description" content="Leroy Buliro: deejay, financial advisor, writer, podcaster">
+        <meta name="twitter:image" content="">
+
+        <!-- Facebook -->
+        <meta property="og:url" content="https://leroybuliro.com/">
+        <meta property="og:title" content="Leroy Buliro">
+        <meta property="og:description" content="Leroy Buliro: deejay, financial advisor, writer, podcaster">
+        <meta property="og:type" content="website">
+        <meta property="og:image" content="">
+        <meta property="og:image:type" content="image/png">
+        <meta property="og:image:width" content="1000">
+        <meta property="og:image:height" content="500">
 
         <!-- Load css file -->
         <link rel="stylesheet" href="{% static 'core/homepage.css' %}">
         
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     </head>
 
     <body>
