--- a/core/templates/core/blog.html
+++ b/core/templates/core/blog.html
@@ -3,8 +3,31 @@
 {% load static %}
 
 {% block title %}
-    <title>A-Z Logs by Leroy Buliro</title>
+    <title>A-Z Logs, a blog by Leroy Buliro</title>
 {% endblock title %}
+
+{% block meta %}
+<meta name="description" content="A-Z Logs, a blog by Leroy Buliro">
+<meta name="keyword" content="Kenya, Nairobi, booze, travel, nightlife, food, lifestyle, culture">
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@leroybuliro">
+<meta name="twitter:creator" content="@leroybuliro">
+<meta name="twitter:title" content="A-Z Logs, a blog by Leroy Buliro">
+<meta name="twitter:description" content="">
+<meta name="twitter:image" content="">
+
+<!-- Facebook -->
+<meta property="og:url" content="https://leroybuliro.com/">
+<meta property="og:title" content="A-Z Logs, a blog by Leroy Buliro">
+<meta property="og:description" content="">
+<meta property="og:type" content="website">
+<meta property="og:image" content="">
+<meta property="og:image:type" content="image/png">
+<meta property="og:image:width" content="1000">
+<meta property="og:image:height" content="500">
+{% endblock meta %}
 
 {% block style %}
 <link rel="stylesheet" href="{% static 'core/blog.css' %}">
@@ -20,12 +43,18 @@
     <a href="{% url 'core:podcast' %}">PODCAST</a>
 {% endblock navmenu %}
 
+{% block mobmenu %}
+    <a href="{% url 'core:index' %}">HOME</a>
+    <a id="menuactive">BLOG</a>
+    <a href="{% url 'core:podcast' %}">PODCAST</a>
+{% endblock mobmenu %}
+
 {% block body %}
 <!-- blog section -->
 <div class="blogpage">
     
     <div id="pagetitle">
-        <p style="color: #fff; font-size: xx-large; font-weight: bold; text-align: center; line-height: 1rem;">A-Z LOGS</p>
+        <p style="color: #fff; font-size: xx-large; font-weight: bold; text-align: center; line-height: 1rem; margin-top: 1rem;">A-Z LOGS</p>
         <p style="color: rgb(141, 141, 141); font-size: medium; font-weight: lighter; text-align: center; line-height: 1rem; margin-top: 8px;">A Leroy Buliro Blog</p>
     </div>
     
