--- a/core/templates/core/podcast.html
+++ b/core/templates/core/podcast.html
@@ -5,6 +5,11 @@
 <title>{{podcast.title}} | Leroy Buliro</title>
 {% endblock title %}
 
+{% block meta %}
+<meta name="description" content="{{podcast.description}}">
+<meta name="keyword" content="{{podcast.tags}}">
+{% endblock meta %}
+
 {% block style %}
 <link rel="stylesheet" href="{% static 'core/podcast.css' %}">
 {% endblock style %}
@@ -18,6 +23,12 @@
     <a href="{% url 'core:blogpage' %}">BLOG</a>
     <a id="menuactive">PODCAST</a>
 {% endblock navmenu %}
+
+{% block mobmenu %}
+    <a href="{% url 'core:index' %}">HOME</a>
+    <a href="{% url 'core:blogpage' %}">BLOG</a>
+    <a id="menuactive">PODCAST</a>
+{% endblock mobmenu %}
 
 {% block body %}
 
