--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -34,6 +34,17 @@
 
 {% block script %}
 <script src="{% static 'core/articlelayout.js' %}"></script>
+<script type="application/ld+json">{
+    "@context": "http://schema.org",
+    "@type": "WebSite",
+      "name": "Leroy Buliro",
+      "author": "Leroy Buliro",
+      "description": "Leroy Buliro: deejay, financial advisor, writer, podcaster",
+      "url": "https://leroybuliro.com",
+      "schemaVersion": "10.0",
+      "keywords": "Kenya, Nairobi, booze, travel, nightlife, food, lifestyle, culture",
+    }
+</script>
 {% endblock script %}
 
 {% block navmenu %}
