--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -36,6 +36,18 @@
         <!-- Load css file -->
         <link rel="stylesheet" href="{% static 'core/homepage.css' %}">
         
+        <script type="application/ld+json">{
+            "@context": "http://schema.org",
+            "@type": "WebSite",
+              "name": "Leroy Buliro",
+              "author": "Leroy Buliro",
+              "description": "Leroy Buliro: deejay, financial advisor, writer, podcaster",
+              "url": "https://leroybuliro.com",
+              "schemaVersion": "10.0",
+              "keywords": "Kenya, Nairobi, booze, travel, nightlife, food, lifestyle, culture",
+            }
+        </script>
+        
     </head>
 
     <body>
@@ -60,5 +72,6 @@
                     document.querySelector('#content').style.width = width+'px'
                 };
         </script> -->
+        
     </body>
 </html>
