--- a/core/static/core/articlelayout.css
+++ b/core/static/core/articlelayout.css
@@ -92,11 +92,10 @@
 }
 .content p:first-child::first-letter {
     font-family: 'IM Fell English', serif;
-    padding: 0 .3rem;
-    margin: 0 .3rem 0 0;
-    font-size: 7rem;
+    padding: 0 .2em;
+    font-size: 7em;
     float: left;
-    line-height: 0.9;
+    line-height: 0.9em;
 }
 #entryend {
     font-family: Permanent Marker;
@@ -163,6 +162,11 @@
     }
     .articlecontent {
         margin: 0% 2%;
+    }
+    .content p:first-child::first-letter {
+        padding: 0 .1em;
+        font-size: 5em;
+        line-height: 1.1em;
     }
     #entryend {
         font-size: 1.4em;
