podcast page app redesign 1

--- a/core/static/core/episode.css
+++ b/core/static/core/episode.css
@@ -1,25 +1,16 @@
-.episodepage p, span {
+.episodepage {
     font-size: 14px;
+    font-family: CrimsonPro;
     line-height: 1.7rem;
     color: #FFFFFF;
-    margin: 0;
-    padding: 0;
 }
 .episodepage h1, h2, h3, h4, h5, h6 {
     color: #FFFFFF;
 }
 .episodepage {
-    padding: 0% 20% 9% 20%;
+    margin: 7vh 0;
+    padding: 0% 20%;
     background-color: #000;
-}
-.episodepage .back_btn {
-    padding: 4em 0em 1.7em 0em;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: left;
-    text-decoration: none;
-    margin: 0em;
 }
 .episodepage .row {  
     display: flex;
@@ -33,7 +24,9 @@
     flex: 60%;
 }
 .episodepage .epi-content {
-    display: block;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
 }
 
 /* Podcast Episode Page Player */
@@ -78,12 +71,10 @@
     margin: 0;
 }
 
-@media screen and (max-width: 769px) {
+@media screen and (max-width: 690px) {
     .episodepage {
-        padding: 0% 2% 10% 2%;
-    }
-    .episodepage .back_btn {
-        padding: 3em 0em 1.4em 0em;
+        margin: 2vh 0;
+        padding: 0% 2%;
     }
     .episodepage .row {   
         flex-direction: column;
