--- a/core/templates/core/podcast.html
+++ b/core/templates/core/podcast.html
@@ -1,4 +1,4 @@
-{% extends "core\base.html" %}
+{% extends "core\podbase.html" %}
 {% load static %}
 
 {% block title %}
@@ -21,23 +21,24 @@
 {% block navmenu %}
     <a href="{% url 'core:index' %}">HOME</a>
     <a href="{% url 'core:blogpage' %}">BLOG</a>
-    <a id="menuactive">PODCAST</a>
+    <a class="menuactive">PODCAST</a>
 {% endblock navmenu %}
 
 {% block mobmenu %}
     <a href="{% url 'core:index' %}">HOME</a>
     <a href="{% url 'core:blogpage' %}">BLOG</a>
-    <a id="menuactive">PODCAST</a>
+    <a class="menuactive">PODCAST</a>
 {% endblock mobmenu %}
 
 {% block body %}
-<!-- Podcast section -->
 <div class="podpage">
 
-    <div class="section1">
-        <img src="{{ podcast.image.url }}" alt="{{podcast.title}}" style="width: 100%; height: auto;">
-        <section class="side">
-            <h2>About</h2>
+    <section id="intro">
+        <div style="width: 100%; height: auto; object-fit: fill;">
+            <img src="{{ podcast.image.url }}" alt="{{podcast.title}}" style="width: 100%; height: 100%;">
+        </div>
+        <div id="side">
+            <h2 style="color: #fff;">About</h2>
             <div id="pod-deet">{{ podcast.description | safe}}</div>
             <div class="dropdown">
                 <button class="dropbtn">LISTEN ON AN APP | ▼</button>
@@ -47,8 +48,8 @@
                     <a href="{{ podcast.spotifyurl }}" target="_blank">Spotify</a>
                 </div>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
 
     <div class="section2">
         <h3 style="color: white; text-decoration: underline; padding: 0em 0em 2em 0em;">Episodes</h3>
